--- a/invest/src/main/resources/application.properties
+++ b/invest/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 # 应用服务 WEB 访问端口
 server.port=8080
 
+# 静态资源路径配置
+spring.web.resources.static-locations=classpath:/static/
+spring.mvc.static-path-pattern=/**
+
