--- a/invest/pom.xml
+++ b/invest/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.9</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
